# University

BTreeExternal/: CMakeLists.txt
BTreeExternal/include/: BTree.hpp  ExternalReaderDammy.h  IExternalReader.h  Interpreter.hpp
BTreeExternal/src/: ExternalReaderDammy.cpp  main.cpp
Machine learning/AssociativeRules/: CMakeLists.txt
Machine learning/AssociativeRules/include/: Normalizer.h  Solver.h
Machine learning/AssociativeRules/src/: Normalizer.cpp  Solver.cpp  main.cpp
Machine learning/Bayes/: CMakeLists.txt
Machine learning/Bayes/include/: DataHolder.h
Machine learning/Bayes/src/: DataHolder.cpp  main.cpp
Machine learning/KNN/: CMakeLists.txt
Machine learning/KNN/include/: IClassfier.h  KNNClassifier.h
Machine learning/KNN/src/: KNNClassifier.cpp  StreamHandler.cpp  main.cpp
Machine learning/LinearRegression/: CMakeLists.txt
Machine learning/LinearRegression/include/: RegressionSolver.h  StreamHandler.h
Machine learning/LinearRegression/src/: RegressionSolver.cpp  main.cpp
Machine learning/LogitModel/: CMakeLists.txt
Machine learning/LogitModel/data/: solution
Machine learning/LogitModel/include/: IClassifier.h  LogitSolver.h
Machine learning/LogitModel/src/: LogitSolver.cpp  main.cpp
Machine learning/Perceptron/: CMakeLists.txt
Machine learning/Perceptron/src/: main.cpp
Machine learning/RandomForest/: CMakeLists.txt
Machine learning/RandomForest/include/: DecisionTree.h
Machine learning/RandomForest/src/: DecisionTree.cpp  main.cpp
